--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -3,115 +3,61 @@ title: Vercel Documentation
 ---
 
 
-## [Start with an idea](#start-with-an-idea)
+# Fumadocs Framework: What is Fumadocs
+URL: /docs/ui/what-is-fumadocs
+Source: https://raw.githubusercontent.com/fuma-nama/fumadocs/refs/heads/main/apps/docs/content/docs/ui/what-is-fumadocs.mdx
 
-Vercel builds tools to help you create products faster.
+Introducing Fumadocs, a docs framework that you can break.
+        
+Fumadocs was created because I wanted a more customisable experience for building docs, to be a docs framework that is not opinionated, **a "framework" that you can break**.
 
-Like , which is your web development assistant. Paste a screenshot or write a few sentences and v0 will generate a starting point for your next app, including the code for how it looks _and_ how it works. v0 then connects to Vercel, takes your code, and creates a URL you can share.
+## Philosophy
 
-## [Iterate quickly while building your product](#iterate-quickly-while-building-your-product)
+**Less Abstraction:** Fumadocs expects you to write code and cooperate with the rest of your software.
+While most frameworks are configured with a configuration file, they usually lack flexibility when you hope to tune its details.
+You can’t control how they render the page nor the internal logic. Fumadocs shows you how the app works, instead of a single configuration file.
 
-The first version of your product isn't perfect, so you need to iterate and try things.
+**Next.js Fundamentals:** It gives you the utilities and a good-looking UI.
+You are still using features of Next.js App Router, like **Static Site Generation**. There is nothing new for Next.js developers, so you can use it with confidence.
 
-You can ask v0 to make updates for you, or if you prefer, export the code to your editor and start building locally. When you've finished adding your new feature, you want to test and make sure it works correctly on different browsers and devices _before_ you update your live application.
+**Opinionated on UI:** The only thing Fumadocs UI (the default theme) offers is **User Interface**. The UI is opinionated for bringing better mobile responsiveness and user experience.
+Instead, we use a much more flexible approach inspired by Shadcn UI — [Fumadocs CLI](/docs/cli), so we can iterate our design quick, and welcome for more feedback about the UI.
 
-Vercel integrates with tools like GitHub where you can save snapshots of your codebase for every change. For example, let's say you send your latest code changes to GitHub in a pull request. Vercel automatically creates a new URL from your changes and sends you a link to review before merging.
+## Why Fumadocs
 
-### [Infrastructure from your code](#infrastructure-from-your-code)
+Fumadocs is designed with flexibility in mind.
 
-How did that URL get created? Vercel took care of all the infrastructure automation for you:
+You can use `fumadocs-core` as a headless UI library and bring your own styles.
+Fumadocs MDX is also a useful library to handle MDX content in Next.js. It also includes:
 
-*   It examined your code to understand what tools you're working with
-*   It installed the necessary dependencies into a temporary, secure sandbox
-*   It ran compute to build your application from these dependencies
-*   It took the build output and generated the cloud infrastructure needed to run your app
-*   It assigned and secured a domain so you can access your app through a URL
+* Many built-in components.
+* Typescript Twoslash, OpenAPI, and Math (KaTeX) integrations.
+* Fast and optimized by default, natively built on App Router.
+* Tight integration with Next.js, you can add it to an existing Next.js project easily.
 
-This is all happening inside of an automatically generated _preview_ environment on Vercel — a place where you can safely iterate and make changes without affecting your application. For example, you might want to connect to a different database to prevent changing your live data.
+You can read [Comparisons](/docs/ui/comparisons) if you're interested.
 
-If your application works correctly and you're happy with the changes, you can merge this new feature into your main codebase. Once again, Vercel will automatically create and build a new URL for you, in a separate _production_ environment.
+### Documentation
 
-Just like that, your application is now live and updated around the world. Make a mistake? Don't sweat it — you can instantly go back to your previous version in a few clicks.
+Fumadocs focuses on **authoring experience**, it provides a beautiful theme and many docs automation tools.
 
-## [Use your favorite developer tools](#use-your-favorite-developer-tools)
+It helps you to iterate your codebase faster while never leaving your docs behind.
+You can take this site as an example of docs site built with Fumadocs.
 
-Vercel helps you build any way your prefer, whether that is a handful of HTML files or a powerful JavaScript framework. While you don't _need_ to use a framework, these abstractions can help you build better products.
+### Blog sites
 
-Frameworks include components and optimizations to help improve your [Core Web Vitals](https://vercel.com/blog/how-core-web-vitals-affect-seo), which is how search engines determine the speed and quality of your application. Your vitals affect your page ranking in search results, so it's important to pay attention and optimize them.
+Since Next.js is already a powerful framework, most features can be implemented with **just Next.js**.
 
-Frameworks also simplify how you build common patterns, like routing between pages or fetching and displaying data from a database. Vercel supports [over 30 different frameworks](/docs/frameworks/more-frameworks) with zero-configuration.
+Fumadocs provides additional tooling for Next.js, including syntax highlighting, document search, and a default theme (Fumadocs UI).
+It helps you to avoid reinventing the wheels.
 
-We are the creators and maintainers of [Next.js](https://nextjs.org), a framework for building React applications. We also help fund the full-time development of [Svelte](https://svelte.dev), as well as support other open-source frameworks.
+## When to use Fumadocs
 
-[
+For most of the web applications, vanilla React.js is no longer enough.
+Nowadays, we also wish to have a blog, a showcase page, a FAQ page, etc. With a
+fancy UI that's breathtaking, in these cases, Fumadocs can help you build the
+docs easier, with less boilerplate.
 
-Next.js
-
-A React framework that gives you building blocks to create web applications.
-
-](https://nextjs.org/)[
-
-AI SDK
-
-An open source library for building AI-powered user interfaces.
-
-](https://sdk.vercel.ai/docs)[
-
-Turborepo
-
-A high-performance build system for JavaScript and TypeScript codebases.
-
-](https://turborepo.com)[
-
-Chat SDK
-
-A free, open-source template that helps you dive into building powerful chatbot applications.
-
-](https://chat-sdk.dev/)[
-
-Flags SDK
-
-A free, open-source library for using feature flags in Next.js and SvelteKit.
-
-](https://flags-sdk.dev/)
-
-## [Stay fast and secure](#stay-fast-and-secure)
-
-Vercel's developer platform understands the tools and frameworks you're using. This enables us to optimize and secure your application automatically in ways that are normally difficult and time consuming.
-
-Instead of manually writing code to define your application infrastructure, Vercel can automatically convert the output from your framework into infrastructure. For example, we manage:
-
-*   [Networking](/docs/edge-network): We help make your application fast globally
-*   [Domains](/docs/domains): We can manage your domains, including DNS, SSL certificates, and nameservers
-*   [Storage](/docs/storage): We offer cache and object storage, as well as first-party database integrations
-*   [Compute](/docs/functions): We provide an autoscaling, distributed, and secure compute platform
-*   [CI/CD](/docs/deployments/builds): We automatically deploy your application as you push to your git repository
-
-### [Observability](#observability)
-
-After shipping your application, you need to understand how it's performing in production. Vercel includes tools to help you view logs and traces, measure performance, and analyze traffic.
-
-*   [Logging](/docs/runtime-logs): We allow you to view, search, and filter build/runtime logs to investigate issues and monitor your application.
-*   [Tracing](/docs/otel): We support integrations with tracing tools like OpenTelemetry for deeper performance analysis.
-*   [Analytics](/docs/analytics): We support first-party, privacy-friendly analytics for understanding how users interact with your application.
-*   [Metrics](/docs/observability): We display and support querying of performance metrics like request counts, error rates, and API latencies.
-
-We also integrate with other observability tools and support draining logs to any service.
-
-### [Security](#security)
-
-Vercel helps protect your web application and prevent unwanted traffic.
-
-*   [Platform Firewall](/docs/vercel-firewall): We automatically block malicious requests and unwanted bots before they reach your application.
-*   [DDoS Protection](/docs/security/ddos-mitigation): We protect your application from traffic spikes caused by Distributed Denial of Service (DDoS) attacks.
-*   [Web Application Firewall](/docs/security/vercel-waf): We allow you to define custom rules to protect from common attacks, web scrapers, and other unwanted traffic.
-
-We are compliant with SOC 2 Type 2, ISO 27001:2022, GDPR, PCI DSS, HIPAA, and other acronyms your security team asks about.
-
-### [Start building today](#start-building-today)
-
-Vercel provides tools to build your ideas. We integrate with dozens of [popular databases](https://vercel.com/marketplace), cloud infrastructure providers like [AWS](/docs/oidc/aws), and more.
-
-[What will you ship?](/new)
-
-Last updated on July 1, 2025
+Fumadocs is maintained by Fuma and many contributors, with care on the maintainability of codebase.
+While we don't aim to offer every functionality people wanted, we're more focused on making basic features perfect and well-maintained.
+You can also help Fumadocs to be more useful by contributing!
