--- a/src/app/markdown/welcome.mdx
+++ b/src/app/markdown/welcome.mdx
@@ -1,6 +1,9 @@
-Welcome to my MDX page!
+# Welcome to my MDX page!
 
 This is some **bold** and _italics_ text.
+
+
+
 
 This is a list in markdown:
 
