--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,7 +1,6 @@
 ---
-title: Comparisons
-description: How is Fumadocs different from other existing frameworks?
-icon: GitCompareArrows
+title: "Hello world"
+summary: "This is my first post!"
 ---
 
 ## Nextra
