--- a/src/app/[locale]/docs/content/docs/index.mdx
+++ b/src/app/[locale]/docs/content/docs/index.mdx
@@ -1,22 +1,87 @@
 # Installation
 
-Follow these steps to install the music software on your device.
+This guide will walk you through the process of installing the music software on your computer, ensuring that everything is ready for a smooth first experience.
+
+---
 
 ## System Requirements
 
-- **Operating System**: Windows 10 or later, macOS 11 or later
-- **Processor**: Intel or ARM, 64-bit
-- **Memory**: Minimum 4GB RAM
-- **Storage**: At least 500MB of free space
+Before installing, make sure your device meets the following minimum requirements:
+
+- **Operating System**: Windows 10 (64-bit) or later, macOS 11 (Big Sur) or later
+- **Processor**: Intel Core i3 or equivalent (ARM and Apple Silicon supported)
+- **Memory**: 4GB RAM minimum (8GB recommended for advanced use)
+- **Storage**: 500MB available disk space (SSD recommended for better performance)
+- **Audio**: Standard audio output device (internal or external)
+
+> 💡 *For best performance when using large libraries or real-time audio effects, we recommend a quad-core CPU and 8GB+ RAM.*
+
+---
 
 ## Installation Steps
 
-1. Download the installer from the [Download Page](/download).
-2. Run the installer and follow the setup instructions.
-3. After installation, launch the software from the desktop or start menu.
+### 1. Download the Installer
+
+Head to our official [Download Page](/download) and choose the correct version for your system:
+
+- `.exe` for Windows
+- `.dmg` for macOS
+
+### 2. Run the Installer
+
+- **Windows**: Double-click the `.exe` file and follow the installation wizard.
+- **macOS**: Open the `.dmg` file, drag the app icon into the `Applications` folder.
+
+You may need to allow the installation through your system's security settings.
+
+### 3. Launch the Software
+
+After installation:
+
+- On **Windows**: Open the app from the Start Menu or Desktop shortcut.
+- On **macOS**: Find it in Launchpad or `/Applications`.
+
+---
 
 ## Post-Installation Checklist
 
-- Make sure the software launches successfully.
-- Test audio output to confirm playback works.
-- Sign in if prompted.
+Once the app launches, we recommend going through this quick setup:
+
+### ✅ Launch Confirmation
+
+- The app should start without crashing.
+- If you see a welcome screen, your installation is successful.
+
+### 🔊 Audio Playback Test
+
+1. Import a sample audio file (you can use the demo track provided).
+2. Press Play to ensure your audio device is correctly configured.
+3. If there's no sound, go to `Settings > Audio Output`.
+
+### 👤 Sign In (If Required)
+
+Some features (like cloud sync or plugin access) require signing in with your account.
+
+- Use the **Sign in** button on the top-right corner.
+- If you don’t have an account yet, you can create one for free.
+
+---
+
+## Troubleshooting Installation Issues
+
+If something doesn't go as expected:
+
+- **Installer doesn’t open**: Try running it as administrator or allow it through antivirus.
+- **macOS can’t verify developer**: Go to *System Preferences > Security & Privacy*, and click *Allow Anyway*.
+- **Software doesn’t launch**: Check if all system requirements are met and try reinstalling.
+
+Need help? Visit our [Support Page](/support) or contact us at `support@example.com`.
+
+---
+
+## Next Steps
+
+🎉 You're now ready to start using the app!
+
+- [→ Interface Overview](/getting-started/interface-overview)
+- [→ Importing Songs](/getting-started/importing-songs)
